<?xml version="1.0"?>

<!--
Copyright (c) 2022, NVIDIA CORPORATION.  All rights reserved.

NVIDIA CORPORATION and its licensors retain all intellectual property
and proprietary rights in and to this software, related documentation
and any modifications thereto.  Any use, reproduction, disclosure or
distribution of this software and related documentation without an express
license agreement from NVIDIA CORPORATION is strictly prohibited.
-->

<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nvblox_performance_measurement</name>
  <version>0.11.0</version>
  <description>Tools for performance measurement of nvblox</description>
  <maintainer email="amillane@nvidia.com">Alexander Millane</maintainer>
  <maintainer email="holeynikova@nvidia.com">Helen Oleynikova</maintainer>
  <maintainer email="hemals@nvidia.com">Hemal Shah</maintainer> 
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nvblox_msgs</depend>
  <depend>nvblox_ros</depend>
  <depend>nvblox_nav2</depend>
  <depend>nvblox_performance_measurement_msgs</depend>
  <depend>nvblox_cpu_gpu_tools</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
